fix: Updated brandmark text to align with logo

--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -27,3 +27,11 @@ p, ol, a {
   a:hover {
     color: var(--clr-secondary);
   }
+
+h1, p {
+  margin-bottom: var(--spacer-400);
+}
+
+  #brandmark_text {
+    margin-bottom: 0;
+  }
